--- a/app/routes_admin.ini
+++ b/app/routes_admin.ini
@@ -1,29 +1,36 @@
 [routes]
 
 ; comments
-GET /admin/comment/list/@viewtype = Controller\Comment->getList
-GET /admin/comment/list/@viewtype/@page = Controller\Comment->getList
+;GET /admin/comment/list/@viewtype = Controller\Comment->getList
+;GET /admin/comment/list/@viewtype/@page = Controller\Comment->getList
 
 ; general CRUD operations
-GET|POST /admin/@module = Controller\Backend->getList
-GET|POST /admin/@module/p-{@page} = Controller\Backend->getList
+;GET|POST /admin/@module = Controller\Backend->getList
+;GET|POST /admin/@module/p-{@page} = Controller\Backend->getList
 ;GET|POST /admin/@module/@action = Controller\Backend->@action
-GET|POST /admin/@module/@action/@id = Controller\Backend->@action
+;GET|POST /admin/@module/@action/@id = Controller\Backend->@action
 ; some method reroutes
-GET /admin/@module/create = Controller\Backend->getSingle
-POST /admin/@module/create = Controller\Backend->post
-GET /admin/@module/edit/@id = Controller\Backend->getSingle
-POST /admin/@module/edit/@id = Controller\Backend->post
+;GET /admin/@module/create = Controller\Backend->getSingle
+;POST /admin/@module/create = Controller\Backend->post
+;GET /admin/@module/edit/@id = Controller\Backend->getSingle
+;POST /admin/@module/edit/@id = Controller\Backend->post
 
 ; dashboard
-GET /admin = Controller\Dashboard->main
+;GET /admin = Controller\Dashboard->main
+
+; Claims Status
+GET|POST /claims = Controller\Claims->index
+GET|POST /claims/pending = Controller\Claims->pending
+GET|POST /claims/approved = Controller\Claims->approved
+GET|POST /claims/rejected = Controller\Claims->rejected
+GET|POST /claims/processing = Controller\Claims->processing
 
 ; settings
-GET|POST /admin/settings = Controller\Settings->general
-GET|POST /admin/settings/@type = Controller\Settings->@type
+;GET|POST /admin/settings = Controller\Settings->general
+;GET|POST /admin/settings/@type = Controller\Settings->@type
 
 ; files
-POST /admin/file [ajax] = Files->upload
+;POST /admin/file [ajax] = Files->upload
 
 [redirects]
-GET|POST /login = /admin
+;GET|POST /login = /admin
