--- a/app/routes_admin.ini
+++ b/app/routes_admin.ini
@@ -25,6 +25,9 @@ GET|POST /claims/approved = Controller\Claims->approved
 GET|POST /claims/rejected = Controller\Claims->rejected
 GET|POST /claims/processing = Controller\Claims->processing
 
+; new claims file
+GET|POST /claims/file-claim = Controller\Claims->fileClaim
+
 ; settings
 ;GET|POST /admin/settings = Controller\Settings->general
 ;GET|POST /admin/settings/@type = Controller\Settings->@type
