--- a/app/routes.ini
+++ b/app/routes.ini
@@ -1,21 +1,19 @@
 [routes]
 ; list view
-GET / = \Controller\Home->index
-GET /dashboard = \Controller\Dashboard->index
-GET|POST /test = \Controller\Dashboard->test
+;GET|POST /test = \Controller\Dashboard->test
 
 ;Account
 
 ; detail view
-GET /@slug = Controller\Post->getSingle
-GET /post/@id = Controller\Post->getSingle
+;GET /@slug = Controller\Post->getSingle
+;GET /post/@id = Controller\Post->getSingle
 
 ; post comment
-POST /@slug = Controller\Post->addComment
+;POST /@slug = Controller\Post->addComment
 
 ; tag list
-GET /tag [ajax] = Controller\Tag->getList
-GET /tag/@slug = Controller\Post->getListByTag
+;GET /tag [ajax] = Controller\Tag->getList
+;GET /tag/@slug = Controller\Post->getListByTag
 
 ; admin
 GET|POST /auth/login = Controller\Auth->login
@@ -34,6 +32,10 @@ GET|POST /auth/verification = Controller\Auth->verification
 
 GET /logout = Controller\Auth->logout
 
+;Dashboard
+GET / = \Controller\Home->index
+GET /dashboard = \Controller\Dashboard->index
+
 [redirects]
-GET|POST /admin/* = /login
-GET|POST /admin = /login
+;GET|POST /* = /auth/login
+GET|POST / = /auth/login
