--- a/app/routes.ini
+++ b/app/routes.ini
@@ -38,4 +38,4 @@ GET /dashboard = \Controller\Dashboard->index
 
 [redirects]
 ;GET|POST /* = /auth/login
-GET|POST / = /auth/login
+;GET|POST / = /auth/login
