--- a/app/routes_admin.ini
+++ b/app/routes_admin.ini
@@ -15,6 +15,9 @@
 ;GET /admin/@module/edit/@id = Controller\Backend->getSingle
 ;POST /admin/@module/edit/@id = Controller\Backend->post
 
+; vehicle submit
+ POST /claims/vehiclesubmit = Controller\Claims->vehicleFill
+ 
 ; dashboard
 ;GET /admin = Controller\Dashboard->main
 
